<resources>
    <string name="app_name">Dvr</string>
    <string name="stop_record_video">Stop Recording</string>
    <string name="stop_record_voice">Stop Taping</string>
    <string name="start_record_video">Start Recording</string>
    <string name="start_record_voice">Start Taping</string>
    <string name="record">Car Record</string>
    <string name="replay">Replay</string>
    <string name="setup">Setup</string>
    <string name="signal_failed">Failed to read signal</string>
    <string name="image_size_set">Image size setting</string>
    <string name="_1080p">1080P</string>
    <string name="_720p">720P</string>
    <string name="_360p">360P</string>
    <string name="_240p">240P</string>
    <string name="format_sd">Format SD Card</string>
    <string name="restore_factory">Restore factory settings</string>
    <string name="time_set">Time settings</string>
    <string name="recording">Recording</string>
    <string name="normal">General</string>
    <string name="emergency">Emergency</string>
    <string name="photo">Photos</string>
    <string name="edit">Edit</string>
    <string name="_1min">1 min</string>
    <string name="_3min">3 mins</string>
    <string name="_3min_def">3 mins</string>
    <string name="_5min">5 mins</string>
    <string name="cancel">Cancel</string>
    <string name="all_select">All</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="restore_content">Under the operation situation,self-settings will be deleted,please be careful.</string>
    <string name="format_sd_content">After the SD card is formatted,the videos will be deleted and cannot recovered,\n are you sure?</string>
    <string name="reset">Reset</string>
    <string name="delete_all">Delete all</string>
    <string name="isSwitching">正在切换，请稍后…</string>
</resources>
