<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/topEdit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginEnd="30dp"
              android:layout_marginStart="190dp"
              android:layout_marginTop="14dp"
              android:background="#000000"
              android:orientation="horizontal">

    <Button
        android:id="@+id/cancel"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_shape"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

    <Button
        android:id="@+id/all_select"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_shape"
        android:text="@string/all_select"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

    <Button
        android:id="@+id/delete"
        android:text="@string/delete"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_shape"

        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

    <Button
        android:id="@+id/move"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_shape"
        android:text="@string/move"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

    <Button
        android:id="@+id/delete_all"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_shape"
        android:text="@string/delete_all"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

</LinearLayout>
