<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/timeSetting"
        android:layout_width="551dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="119dp"
        android:text="@string/time_set"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

    <TextView
        android:id="@+id/defaultTime"
        android:layout_width="397dp"
        android:layout_height="35dp"
        android:layout_marginStart="611dp"
        android:layout_marginTop="122dp"
        android:gravity="end"
        android:text="@string/_3min_def"
        android:textColor="@color/colorGray"
        android:textSize="26sp"
        />

    <ImageView
        android:id="@+id/timeArrows"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="1034dp"
        android:layout_marginTop="119dp"
        android:src="@drawable/right_arrows"
        />


    <TextView
        android:id="@+id/imageSizeSetting"
        android:layout_width="551dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="209dp"
        android:text="@string/image_size_set"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

    <TextView
        android:id="@+id/defaultSize"
        android:layout_width="397dp"
        android:layout_height="35dp"
        android:layout_marginStart="611dp"
        android:layout_marginTop="212dp"
        android:gravity="end"
        android:text="@string/_1080p"
        android:textColor="@color/colorGray"
        android:textSize="26sp"
        />

    <ImageView
        android:id="@+id/sizeArrows"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="1034dp"
        android:layout_marginTop="209dp"
        android:src="@drawable/right_arrows"
        />


    <TextView
        android:id="@+id/formatSDCard"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="297dp"
        android:text="@string/format_sd"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />


    <TextView
        android:id="@+id/restoreFactory"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="387dp"
        android:text="@string/restore_factory"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />


</RelativeLayout>
