<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/topBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
    >

    <TextView
        android:id="@+id/normal_video_replay"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:text="@string/normal"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        />

    <TextView
        android:id="@+id/emergency_video_replay"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/normal_video_replay"
        android:text="@string/emergency"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        />

    <TextView
        android:id="@+id/photo_replay"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/emergency_video_replay"
        android:text="@string/photo"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        />

    <Button
        android:id="@+id/replay_edit"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="950dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_shape"
        android:text="@string/edit"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        />

</RelativeLayout>
