<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="600dp"
                android:layout_height="340dp"
                android:background="@drawable/restoredialogframe"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/restore_factory"
        android:textColor="@color/colorGold"
        android:textSize="33sp"/>

    <TextView
        android:id="@+id/content1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:gravity="center"
        android:text="@string/restore_content"
        android:textColor="@color/colorWhite"
        android:lineSpacingExtra="28dp"
        android:lineSpacingMultiplier="0.5"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="279dp"
        android:background="@color/colorTransparent"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/restore"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="409dp"
        android:layout_marginTop="279dp"
        android:background="@color/colorTransparent"
        android:text="@string/restore"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="250dp"
        android:background="@color/colorGoldGrey"
        />

    <View
        android:layout_width="2dp"
        android:layout_height="81dp"
        android:layout_below="@id/line_view"
        android:layout_marginStart="300dp"
        android:background="@color/colorGoldGrey"
        />

</RelativeLayout>
