<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="600dp"
                android:layout_height="419dp"
                android:background="@drawable/restoredialogframe"
    >

    <TextView
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="28dp"
        android:lineSpacingMultiplier="0.5"
        android:text="@string/image_size_set"
        android:textColor="@color/colorGold"
        android:textSize="32sp"/>


    <TextView
        android:id="@+id/_720p"
        android:layout_width="500dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:gravity="center_horizontal"
        android:text="@string/_720p"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>


    <TextView
        android:id="@+id/_1080p"
        android:layout_width="500dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="219dp"
        android:gravity="center_horizontal"
        android:text="@string/_1080p"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>


    <TextView
        android:id="@+id/image_set_cancel"
        android:layout_width="500dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="356dp"
        android:gravity="center_horizontal"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <View
        android:id="@+id/line_view1"
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:layout_below="@id/content1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="190dp"
        android:background="@color/colorGoldGrey"
        />

    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/content1"
        android:layout_marginTop="323dp"
        android:background="@color/colorGoldGrey"
        />


</RelativeLayout>
