<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="600dp"
                android:layout_height="509dp"
                android:background="@drawable/restoredialogframe"
    >

    <TextView
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="28dp"
        android:lineSpacingMultiplier="0.5"
        android:text="@string/time_set"
        android:textColor="@color/colorGold"
        android:textSize="32sp"/>


    <TextView
        android:id="@+id/one_min"
        android:layout_width="500dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:gravity="center_horizontal"
        android:text="@string/_1min"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>


    <TextView
        android:id="@+id/three_min"
        android:layout_width="500dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="219dp"
        android:gravity="center_horizontal"
        android:text="@string/_3min"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>


    <TextView
        android:id="@+id/five_min"
        android:layout_width="500dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="309dp"
        android:gravity="center_horizontal"
        android:text="@string/_5min"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/time_set_cancel"
        android:layout_width="500dp"
        android:layout_height="57dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="446dp"
        android:gravity="center_horizontal"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <View
        android:id="@+id/line_view1"
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_below="@id/content1"
        android:layout_marginTop="190dp"
        android:background="@color/colorGoldGrey"
        />

    <View
        android:id="@+id/line_view2"
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_below="@id/content1"
        android:layout_marginTop="280dp"
        android:background="@color/colorGoldGrey"
        />

    <View
        android:id="@+id/line_view3"
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_below="@id/content1"
        android:layout_marginTop="370dp"
        android:background="@color/colorGoldGrey"
        />

    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/content1"
        android:layout_marginTop="413dp"
        android:background="@color/colorGoldGrey"
        />


</RelativeLayout>
